--- a/LAB02 - Setting up a basic Service/Postgres/Dockerfile
+++ b/LAB02 - Setting up a basic Service/Postgres/Dockerfile
@@ -1,7 +1,11 @@
 FROM postgres:latest
 
-ENV POSTGRES_USER=myuser
-ENV POSTGRES_PASSWORD=mypassword
+ENV POSTGRES_USER=admin
+ENV POSTGRES_PASSWORD=password
+ENV POSTGRES_DB=db
+
+
+COPY init.sql /docker-entrypoint-initdb.d/
 
 EXPOSE 5432
 
