feat: modified services

--- a/LAB02 - Setting up a basic Service/Postgres/Dockerfile
+++ b/LAB02 - Setting up a basic Service/Postgres/Dockerfile
@@ -4,6 +4,8 @@ ENV POSTGRES_USER=admin
 ENV POSTGRES_PASSWORD=password
 ENV POSTGRES_DB=db
 
+COPY init.sql /docker-entrypoint-initdb.d/
+
 EXPOSE 5432
 
 CMD ["postgres"]
