feat: aligned features of Lab2 with new concepts i.e. management of IDs with superclass. Implemented automatic generation of database schema with ddl_auto=create_drop. Updated Docker Postgres container to not execute anything at the beginning

--- a/LAB03 - Ticket management/server/src/main/resources/application.properties
+++ b/LAB03 - Ticket management/server/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.username=admin
 spring.datasource.password=password
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 
