--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -23,10 +23,15 @@ jobs:
       with:
         distribution: temurin
         java-version: 17
+        
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
+      
     - name: Run build with Gradle Wrapper
-      run: ./gradlew build
+    - uses: gradle/gradle-build-action@v2
+      with:
+        gradle-version: release-candidate
+    - run: gradle build --dry-run
       
 
 
