--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -26,8 +26,8 @@ jobs:
       
     - uses: gradle/gradle-build-action@v2
       with:
-        gradle-version: release-candidate
-    - run: gradle build --dry-run
+        gradle-version: 7.6.1
+    - run: gradle build
       
 
 
