--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -34,7 +34,7 @@ jobs:
       
     - name: Build with Gradle
       working-directory: './LAB03 - Ticket management/server'
-      run: gradle build
+      run: gradle build --dry-run
       
 
 
