--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -13,7 +13,7 @@ on:
       - main
     paths:
       - 'LAB03 - Ticket management/**'
-      - './github/**'
+      - '.github/**'
 
 jobs:
   build-gradle-project:
