Added docker-compose test job

--- a/LAB03 - Ticket management/Postgres/docker-compose.yml
+++ b/LAB03 - Ticket management/Postgres/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - "5432:5432"
 
   ticketing-service:
+    depends_on: 
+    - postgres
+    
     image: runcor3/ticketing-service:latest
     ports:
       - "8080:8080"
