--- a/LAB03 - Ticket management/server/src/main/resources/application.properties
+++ b/LAB03 - Ticket management/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/db
+spring.datasource.url=jdbc:postgresql://postgres-1:5432/db
 spring.datasource.username=admin
 spring.datasource.password=password
 
