Modified postgres url #2

--- a/LAB03 - Ticket management/Postgres/docker-compose.yml
+++ b/LAB03 - Ticket management/Postgres/docker-compose.yml
@@ -3,13 +3,15 @@ version: '3'
 services:
   postgres:
     image: runcor3/webapp2_postgres:3.0
+    container_name: postgres
     ports:
       - "5432:5432"
 
   ticketing-service:
     depends_on: 
     - postgres
-    
+
     image: runcor3/ticketing-service:latest
+    container_name: ticketing-service
     ports:
       - "8080:8080"
