--- a/LAB03 - Ticket management/Design/Schemas/Requests/newTicketRequest.yaml
+++ b/LAB03 - Ticket management/Design/Schemas/Requests/newTicketRequest.yaml
@@ -11,10 +11,10 @@ properties:
   description:
     type: string
     description: Textual description od the issue encountered by the user.
-  serial_number:
+  serialNumber:
     type: integer
-    $ref: ../Objects/productschema.yaml#/properties/serial_number
+    $ref: "../Objects/productschema.yaml#/properties/serialNumber"
     description: The identifier of the product on which the ticket has been opened by the user.
 required:
 - description
-- serial_number
+- serialNumber
