--- a/LAB03 - Ticket management/Design/Schemas/Responses/newTicketResponse.yaml
+++ b/LAB03 - Ticket management/Design/Schemas/Responses/newTicketResponse.yaml
@@ -16,15 +16,15 @@ properties:
     description: Textual description od the issue encountered by the user.
   serial_number:
     type: integer
-    $ref: ../Objects/productschema.yaml#/properties/serial_number
+    $ref: '../Objects/productschema.yaml#/properties/serialNumber'
     description: The identifier of the product on which the ticket has been opened by the user.
   user_id:
     type: integer
-    $ref: "../Objects/profileschema.yaml#/properties/profile_id"
+    $ref: '../Objects/profileschema.yaml#/properties/profileId'
     description: Identifier of the user who has opened the ticket.
   expert_id:
     type: integer
-    $ref: "../Objects/profileschema.yaml#/properties/profile_id"
+    $ref: '../Objects/profileschema.yaml#/properties/profileId'
     description: Identifier of the expert to whom the ticket has been assigned.
   creation_date:
     type: date
