--- a/LAB03 - Ticket management/Design/Schemas/Responses/newTicketResponse.yaml
+++ b/LAB03 - Ticket management/Design/Schemas/Responses/newTicketResponse.yaml
@@ -8,34 +8,34 @@ properties:
   $schema:
     type: string
     description: Path to the JSON Schema to use for the validation of the JSON data structure.
-  ticket_id:
+  ticketId:
     type: integer
     description: Unique identifier of the ticket.
   description:
     type: string
     description: Textual description od the issue encountered by the user.
-  serial_number:
+  serialNumber:
     type: integer
     $ref: '../Objects/productschema.yaml#/properties/serialNumber'
     description: The identifier of the product on which the ticket has been opened by the user.
-  user_id:
+  userId:
     type: integer
     $ref: '../Objects/profileschema.yaml#/properties/profileId'
     description: Identifier of the user who has opened the ticket.
-  expert_id:
+  expertId:
     type: integer
     $ref: '../Objects/profileschema.yaml#/properties/profileId'
     description: Identifier of the expert to whom the ticket has been assigned.
-  creation_date:
+  creationDate:
     type: date
     description: When the ticket has been created.
-  last_modified:
+  lastModified:
     type: date
     description: When the ticket was last last modified.
 required:
 - description
-- serial_number
-- user_id
-- expert_id
-- creation_date
-- last_modified
+- serialNumber
+- userId
+- expertId
+- creationDate
+- lastModified
