refactor: Wire framed structure of new Ticket Controllers and refactored Profile into Customer

--- a/LAB03 - Ticket management/Design/Schemas/Responses/newTicketResponse.yaml
+++ b/LAB03 - Ticket management/Design/Schemas/Responses/newTicketResponse.yaml
@@ -11,6 +11,9 @@ properties:
   ticketId:
     type: integer
     description: Unique identifier of the ticket.
+  state:
+    type: string
+    enum: [OPEN, CLOSED, RESOLVED, IN_PROGRESS, REOPENED]
   description:
     type: string
     description: Textual description od the issue encountered by the user.
