--- a/LAB03 - Ticket management/Postgres/docker-compose.yml
+++ b/LAB03 - Ticket management/Postgres/docker-compose.yml
@@ -15,3 +15,13 @@ services:
     container_name: ticketing-service
     ports:
       - "8080:8080"
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:21.1.1
+    container_name: keycloak
+    environment:
+    - KEYCLOAK_ADMIN=admin
+    - KEYCLOAK_ADMIN_PASSWORD=password
+    ports:
+      - "8888:8080"
+    command: start-dev
