--- a/LAB04 - Securing the application/server/src/main/resources/application.properties
+++ b/LAB04 - Securing the application/server/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/db
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=admin
 spring.datasource.password=password
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8888/realms/TicketingServiceRealm
 
