--- a/LAB03 - Ticket management/server/src/main/resources/application.properties
+++ b/LAB03 - Ticket management/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/db
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=admin
 spring.datasource.password=password
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
