--- a/LAB04 - Securing the application/server/src/main/resources/application.properties
+++ b/LAB04 - Securing the application/server/src/main/resources/application.properties
@@ -9,3 +9,6 @@ logging.level.org.springframework.web: DEBUG
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8888/realms/TicketingServiceRealm
 
+jwt.auth.converter.resource-id=ticketing-service-client
+jwt.auth.converter.principal-attribute=preferred_username
+
