feat: tried to implement automatic user registration on keycloak, having problems with authenticating on keycloak from spring

--- a/LAB04 - Securing the application/server/src/main/resources/application.properties
+++ b/LAB04 - Securing the application/server/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8888/realm
 jwt.auth.converter.resource-id=ticketing-service-client
 jwt.auth.converter.principal-attribute=preferred_username
 
+keycloak.admin.username=admin
+
