--- a/LAB04 - Securing the application/Docker/docker-compose.yml
+++ b/LAB04 - Securing the application/Docker/docker-compose.yml
@@ -17,7 +17,8 @@ services:
       - "8080:8080"
 
   keycloak:
-    image: quay.io/keycloak/keycloak:21.1.1
+    #image: quay.io/keycloak/keycloak:21.1.1
+    image: runcor3/keycloak_webapp2:latest
     container_name: keycloak
     environment:
     - KEYCLOAK_ADMIN=admin
