fix: modified ticketing service default port to 8081

--- a/LAB04 - Securing the application/server/src/main/resources/application.properties
+++ b/LAB04 - Securing the application/server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:postgresql://postgres:5432/db
 spring.datasource.username=admin
 spring.datasource.password=password
+server.port=8081
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
