fix: modify keycloak and postgres endpoints for deployment

--- a/LAB04 - Securing the application/server/src/main/resources/application.properties
+++ b/LAB04 - Securing the application/server/src/main/resources/application.properties
@@ -1,14 +1,19 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/db
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=admin
 spring.datasource.password=password
+
 server.port=8081
+keycloak.url=keycloak
+keycloak.port=8080
+postgres.url=postgres
+postgres.port=5432
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.web: DEBUG
 
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/TicketingServiceRealm
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/TicketingServiceRealm
 
 jwt.auth.converter.resource-id=ticketing-service-client
 jwt.auth.converter.principal-attribute=preferred_username
